fix spacing

--- a/src/components/Markdown/markdown.scss
+++ b/src/components/Markdown/markdown.scss
@@ -113,7 +113,7 @@
 
 h5 {
   @include type-style('heading-02');
-  margin-top: -1rem;
+  margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
 
